--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,7 +12,7 @@ dependencies:
     sdk: flutter
   bishop: ^0.3.2
   equatable: ^2.0.3
-  squares: 1.0.0-dev.1
+  squares: ^1.0.0-dev.1
 
 dev_dependencies:
   flutter_test:
