--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: square_bishop
 description: A bridge package between Squares and Bishop, simplifying common uses.
-version: 0.2.0-dev.1
+version: 0.2.0
 homepage: https://github.com/alexobviously/squares
 
 environment:
@@ -12,7 +12,7 @@ dependencies:
     sdk: flutter
   bishop: ^0.3.2
   equatable: ^2.0.3
-  squares: ^1.0.0-dev.1
+  squares: ^1.0.0
 
 dev_dependencies:
   flutter_test:
