--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,18 +1,18 @@
 name: square_bishop
 description: A bridge package between Squares and Bishop, simplifying common uses.
-version: 0.2.2
+version: 0.2.3
 homepage: https://github.com/alexobviously/squares
 
 environment:
-  sdk: ">=2.13.0 <3.0.0"
+  sdk: ">=2.17.0 <3.0.0"
   flutter: ">=1.17.0"
 
 dependencies:
   flutter:
     sdk: flutter
-  bishop: ^0.4.0
+  bishop: ^0.5.0
   equatable: ^2.0.3
-  squares: ^1.0.2-dev.1
+  squares: ^1.0.2
 
 dev_dependencies:
   flutter_test:
