--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,16 +1,16 @@
 name: square_bishop
 description: A bridge package between Squares and Bishop, simplifying common uses.
-version: 0.2.17
+version: 0.3.0
 homepage: https://github.com/alexobviously/square_bishop
 
 environment:
-  sdk: ">=2.17.0 <3.0.0"
+  sdk: '>=3.2.0 <4.0.0'
   flutter: ">=1.17.0"
 
 dependencies:
   flutter:
     sdk: flutter
-  bishop: ^1.4.0
+  bishop: ^1.4.1
   equatable: ^2.0.5
   squares: ^1.2.1
 
